--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -4,4 +4,4 @@ FLINT_HOME = @FLINT_HOME@
 #PKG_CPPFLAGS=-I/usr/local-core2/include/flint
 PKG_CPPFLAGS=-I$(GMP_HOME)/include -I$(MPFR_HOME)/include -I$(FLINT_HOME)/include/flint
 #PKG_LIBS=-L/usr/local-core2/lib -lgmp -lmpfr -lflint
-PKG_LIBS=-L$(GMP_HOME)/lib -I$(MPFR_HOME)/lib -I$(FLINT_HOME)/lib -lgmp -lmpfr -lflint
+PKG_LIBS=-L$(GMP_HOME)/lib -L$(MPFR_HOME)/lib -L$(FLINT_HOME)/lib -lgmp -lmpfr -lflint
