Ah-ha!!  We can do parallel reduced sum ... just restrict how many threads to use for smaller vectors AND don't copy the whole input vector to every thread!  (scale one extra core per 20 sums upto max and simply send pointer to single vector to each thread)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,12 @@ Maintainer: Louis Aslett <louis.aslett@stats.ox.ac.uk>
 Description: A reference implementation of the Fan and Vercauteren homomorphic
     encrytpion scheme.
 License: GPL-2
+ByteCompile: yes
 Imports:
     Rcpp (>= 0.11.2),
-    methods
-LinkingTo: Rcpp
+    methods,
+    RcppParallel
+LinkingTo: Rcpp, RcppParallel
 Depends: gmp
 Suggests:
     testthat,
