Fix decryption of cipher text vector.  Many fixes so that R CMD check passes with only 2 documentation warnings (related to Arithmetic: how do have a page named like this without an alias in roxygen2?)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports:
     methods,
     RcppParallel
 LinkingTo: Rcpp, RcppParallel
-Depends: gmp
+Depends:
+    gmp
 Suggests:
     testthat,
     microbenchmark
