--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,4 @@ S3method(dec, Rcpp_FandV_sk)
 S3method(saveFHE, FandV_keys)
 S3method(saveFHE, Rcpp_FandV_ct)
 S3method(saveFHE, Rcpp_FandV_ct_vec)
+S3method("%*%", Rcpp_FandV_ct_vec) # See FandV.R for why this is necessary
