Initial implementation of cipher text matrices.  Currently only encrypt, index [,] and decrypt.
Some header line cleanup too.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ S3method(saveFHE, FandV_keys)
 S3method(saveFHE, Rcpp_FandV_ct)
 S3method(saveFHE, Rcpp_FandV_ct_vec)
 S3method("%*%", Rcpp_FandV_ct_vec) # See FandV.R for why this is necessary
+S3method("matrix", Rcpp_FandV_ct_vec)
