--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ S3method(saveFHE, Rcpp_FandV_ct)
 S3method(saveFHE, Rcpp_FandV_ct_vec)
 S3method("%*%", Rcpp_FandV_ct_vec) # See FandV.R for why this is necessary
 S3method("matrix", Rcpp_FandV_ct_vec)
+S3method("%*%", Rcpp_FandV_ct_mat)
