Updated description file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,24 @@
 Package: HomomorphicEncryption
 Type: Package
 Title: Fully Homomorphic Encryption
-Version: 0.1
-Date: 2014-07-18
+Version: 0.2
+Date: 2015-01-07
 Author: Louis Aslett
 Maintainer: Louis Aslett <louis.aslett@stats.ox.ac.uk>
-Description: A reference implementation of the Fan and Vercauteren homomorphic
-    encrytpion scheme.
+Description: A reference implementation of homomorphic encryption schemes.
+    These are encryption schemes which allow limited operations (such as
+    addition and multiplication) to be performed on the cipher text directly
+    without decrypting first.  In other words, if you encrypt the values 2 and 3
+    and "add" their cipher texts then decrypting renders 5.
 License: GPL-2
 ByteCompile: yes
 Imports:
     Rcpp (>= 0.11.2),
     methods,
     RcppParallel
-LinkingTo: Rcpp, RcppParallel
+LinkingTo:
+    Rcpp,
+    RcppParallel
 Depends:
     gmp
 Suggests:
