--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,8 @@ export(saveFHE,
        saveRDS)
 
 # Methods which are not S4 generic by default
-exportMethods("diag")
+exportMethods("diag",
+              "diag<-")
 
 # FandV method dispatch
 S3method(keygen, Rcpp_FandV_par)
