Full implementation and tests of rbind().  Added tests for rep().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,8 @@ export(saveFHE,
 # Methods which are not S4 generic by default
 exportMethods("diag",
               "diag<-",
-              "t")
+              "t",
+              "dimnames<-")
 
 # FandV method dispatch
 S3method(keygen, Rcpp_FandV_par)
