Add fully parallel (and serial) implementations of rowSums() and colSums().  Also, added addEq method to cipher texts for in place addition ... NB use this in many other places for improved performance (e.g. sum, matrix mul, etc)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,9 @@ export(saveFHE,
 exportMethods("diag",
               "diag<-",
               "t",
-              "dimnames<-")
+              "dimnames<-",
+              "rowSums",
+              "colSums")
 
 # FandV method dispatch
 S3method(keygen, Rcpp_FandV_par)
