--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,3 +40,16 @@ S3method("%*%", Rcpp_FandV_ct_vec) # See FandV.R for why this is necessary
 S3method("%*%", Rcpp_FandV_ct_mat)
 S3method("matrix", Rcpp_FandV_ct)
 S3method("matrix", Rcpp_FandV_ct_vec)
+
+# FandV_CRT method dispatch
+S3method(print, FandV_CRT)
+S3method(print, FandV_CRT_keys)
+S3method(print, FandV_CRT_pk)
+S3method(print, FandV_CRT_sk)
+S3method(print, FandV_CRT_rlk)
+S3method(keygen, FandV_CRT)
+S3method(enc, FandV_CRT_pk)
+S3method(dec, FandV_CRT_sk)
+
+# General CRT method dispatch
+S3method(dec, CRT)
