--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,8 @@ S3method("%*%", Rcpp_FandV_ct_mat)
 S3method("matrix", Rcpp_FandV_ct)
 S3method("matrix", Rcpp_FandV_ct_vec)
 
+export("matrix.Rcpp_FandV_ct")
+
 # # FandV_CRT method dispatch
 # S3method(print, FandV_CRT)
 # S3method(print, FandV_CRT_keys)
