--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(keygen, Rcpp_FandV_par)
 S3method(enc, Rcpp_FandV_pk)
 S3method(dec, Rcpp_FandV_sk)
 S3method(saveFHE, FandV_keys)
+S3method(saveFHE, Rcpp_FandV_pk)
 S3method(saveFHE, Rcpp_FandV_ct)
 S3method(saveFHE, Rcpp_FandV_ct_vec)
 S3method(saveFHE, Rcpp_FandV_ct_mat)
