--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: HomomorphicEncryption
 Type: Package
 Title: Fully Homomorphic Encryption
-Version: 0.3.3
+Version: 0.3.4
 Date: 2016-09-30
 Author: Louis Aslett
-Maintainer: Louis Aslett <louis.aslett@stats.ox.ac.uk>
+Maintainer: Louis Aslett <louis.aslett@durham.ac.uk>
 Description: A reference implementation of homomorphic encryption schemes.
     These are encryption schemes which allow limited operations (such as
     addition and multiplication) to be performed on the cipher text directly
