Add flint to SystemRequirements. If pull request #157 at rstudio/r-system-requirements is merged (https://github.com/rstudio/r-system-requirements/pull/157) then this should enable auto-install of dependencies on Linux.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Suggests:
     testthat,
     microbenchmark
 RcppModules: FandV
-SystemRequirements: C++11
+SystemRequirements: C++11, flint: flint-devel (rpm), libflint-dev (deb),
+    flint (homebrew)
 Encoding: UTF-8
 RoxygenNote: 7.3.1
