Add missing RcppParallel build and runtime linker statements

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Suggests:
     testthat,
     microbenchmark
 RcppModules: FandV
-SystemRequirements: C++11, flint: flint-devel (rpm), libflint-dev (deb),
-    flint (homebrew)
+SystemRequirements: GNU make; C++11; flint: flint-devel (rpm),
+    libflint-dev (deb), flint (homebrew)
 Encoding: UTF-8
 RoxygenNote: 7.3.1
